--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
     "lucide-react": "^0.408.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-speech-to-text": "^0.8.0",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
